# Messaging-Platform

./: FEATURES.md  MESSAGING_PLATFORM.md  package.json  tailwind.config.ts
Backend/Messaging/: Cargo.toml
Backend/Messaging/src/: config.rs  metrics.rs
Backend/Messaging/src/message/: types.rs
Backend/Websocket-gateway/: go.mod
Backend/Websocket-gateway/internal/auth/: jwt.go
Backend/Websocket-gateway/internal/config/: config.go
Backend/Websocket-gateway/internal/connection/: client.go  manager.go  shard.go
Backend/Websocket-gateway/internal/metrics/: collector.go
Backend/Websocket-gateway/internal/pubsub/: redis.go
Backend/Websocket-gateway/internal/server/: websocket.go
Backend/Websocket-gateway/pkg/protocol/: messages.go
Backend/Websocket/cmd/gateway/: main.go
app/: globals.css  layout.tsx  page.tsx
app/api/chats/: route.ts
app/api/chats/[id]/: route.ts
app/api/chats/[id]/messages/: route.ts
app/api/friend-requests/: route.ts
app/api/messages/: route.ts
app/api/messages/[id]/reactions/: route.ts
app/api/profile/: route.ts
components/: add-friend-modal.tsx  chat-list.tsx  chat-view.tsx  message-input.tsx  message-item.tsx  theme-provider.tsx  theme-toggle.tsx  user-profile-modal.tsx
components/ui/: button.tsx  dialog.tsx
hooks/: use-theme.ts
scripts/: add-new-features.sql  seed-data.sql  setup-messaging-db.sql
